# core-elf-build-ids

./: .gitignore  README.md  core_build_ids.py  hello  pyproject.toml
core_elf_build_ids/: build_ids.py  core_build_ids.py
