[tool.poetry]
name = "core-elf-build-ids"
version = "0.1.0"
description = "parse build ids from an ELF coredump file"
authors = ["Noah Pendleton <2538614+noahp@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyelftools = "^0.28"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
